update the contact us section and fixed the navbar on mobile view

--- a/app/_components/ContactForm/styles.module.css
+++ b/app/_components/ContactForm/styles.module.css
@@ -1,4 +1,16 @@
+.errorMessage {
+  color: #ce0303;
+  font-size: 14px;
+  display: inline-block;
+  margin-top: 8px;
+  padding-left: 6px;
+}
+
 .contactForm {
+  background-color: #ffffff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -6,18 +18,12 @@
 
 .contactForm input,
 .contactForm textarea {
-  border: none;
-  font-size: 18px;
-  outline: 1px solid #ddd;
-  padding: 12px 16px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 14px 16px;
+  font-size: 16px;
   width: 100%;
-  box-shadow: 1px 1px 2px 1px #e7e7e7, -1px -1px 2px 1px #e7e7e7;
-  transition: all 150ms linear;
-}
-
-.contactForm input:focus,
-.contactForm textarea:focus {
-  box-shadow: 1px 1px 2px 1px #172554, -1px -1px 2px 1px #172554;
+  background: #fefefe;
 }
 
 .contactForm textarea {
@@ -25,39 +31,21 @@
 }
 
 .sendBtn {
-  padding: 12px 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 12px 24px;
+  background: linear-gradient(to right, #4f46e5, #9333ea);
   color: #fff;
-  background-color: #242424;
-  transition: all 300ms linear;
-  border-radius: 4px;
-  font-weight: 600;
-  font-size: 17px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 16px;
+  border-radius: 8px;
   border: none;
-  outline: none;
   cursor: pointer;
+  transition: 0.3s ease-in-out;
 }
 
 .sendBtn:hover {
-  background-color: #161616;
-}
-
-.resetButton {
-  position: absolute;
-  top: -200px;
-  left: -200px;
-  visibility: hidden;
-  width: 0px;
-  height: 0px;
-  overflow: hidden;
-  z-index: -100;
-}
-
-.errorMessage {
-  color: #ce0303;
-  font-size: 14px;
-  display: inline-block;
-  margin-top: 8px;
-  padding-left: 6px;
+  opacity: 0.9;
 }
