--- a/app/_components/ContactSection/styles.module.css
+++ b/app/_components/ContactSection/styles.module.css
@@ -1,22 +1,19 @@
 .contactSection {
-  padding: 60px 0px;
-  background-color: #fff;
+  padding: 60px 20px;
+  background-color: #f9f9f9;
 }
 
 .heading {
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 
 .contactContainer {
   display: grid;
-  grid-template-rows: auto 320px;
-  gap: 20px;
+  gap: 30px;
 }
 
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   .contactContainer {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
   }
 }
